# what_does_bert_look_at

./: README.md  attention_each_head.py  attention_layer.py  config.yaml  diff_attention.py  index.py  main.py  nohup.out  pyproject.toml  requirements.txt  test.py
src/: sentence.txt
